[project]
name = "scaling-crl"
version = "0.1.0"
description = "1000 Layer Networks for Self-Supervised RL: Scaling Depth Can Enable New Goal-Reaching Capabilities"
readme = "README.md"
requires-python = ">3.13"
dependencies = [
    "numpy",
    "jax[cuda13]",
    "jaxlib",
    "nvidia-cudnn-cu13",
    "nvidia-cuda-cupti",
    "nvidia-cusolver",
    "flax",
    "tyro",
    "wandb",
    "wandb-osh",
    "brax",
    "mediapy",
    "scipy",
    "mujoco",
    "gymnasium",
    "warp-lang",
]

[tool.setuptools]
py-modules = []

[tool.uv]
# To install JAX with CUDA support, uv can look at the JAX releases.
# However, you may need to adjust the jax/jaxlib version constraints to match specific CUDA build strings
# or use `jax[cuda12]` if supported by that version.
find-links = ["https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

